chore: 更新配置文件和爬虫脚本
在config.json中添加新的版本类型和特价信息，并修改spider.py以支持多年份数据爬取

--- a/config.json
+++ b/config.json
@@ -15,7 +15,8 @@
         "初回限定版",
         "豪華特装版",
         "デラックス版",
-        "完全生産限定版"
+        "完全生産限定版",
+        "スペシャルパッケージ版"
     ],
     "special": [
         "Normal Edition",
@@ -25,6 +26,7 @@
         "＋Original Soundtrack",
         "Super Memorial Edition",
         "抱き枕カバーエディション",
+        "＜特価セール：50％引き＞",
         "描き下ろし抱き枕カバー付き",
         "＜早期予約キャンペーン特典付＞",
         "＜早期予約キャンペーン特典付き＞",
