feat: 为游戏列表添加分页功能
在config.json中添加per_page配置项，默认值为25。修改web_controller.py中的get_games路由，支持分页查询。更新templates/data.html，添加分页按钮并实现分页加载功能，提升用户体验。

--- a/config.json
+++ b/config.json
@@ -37,5 +37,6 @@
         "げっちゅ屋限定B2タペストリー スペシャルリマスターver付",
         "＋オリヴィ 抱き枕カバー Sweetsランジェリー＜げっちゅ屋限定販売＞",
         "ゆなまろ先生描き下ろし「ミリス」抱き枕カバーセット  げっちゅ屋限定WスエードB2タペストリー付"
-    ]
+    ],
+    "per_page": 25
 }
