--- a/config.json
+++ b/config.json
@@ -19,16 +19,19 @@
         "スペシャルパッケージ版"
     ],
     "special": [
+        "＜2次ロット分＞",
         "Normal Edition",
         "オナホール同梱版",
         "・げっちゅ屋セット",
         "B2タペストリー付き",
+        "＜完全限定受注生産＞",
         "＋Original Soundtrack",
         "Super Memorial Edition",
         "抱き枕カバーエディション",
         "＜特価セール：50％引き＞",
         "描き下ろし抱き枕カバー付き",
         "＜早期予約キャンペーン特典付＞",
+        "＜早期購入キャンペーン特典付き＞",
         "＜早期予約キャンペーン特典付き＞",
         "げっちゅ屋限定B2タペストリー付",
         "げっちゅ屋限定B2タペストリー付き",
@@ -38,5 +41,5 @@
         "＋オリヴィ 抱き枕カバー Sweetsランジェリー＜げっちゅ屋限定販売＞",
         "ゆなまろ先生描き下ろし「ミリス」抱き枕カバーセット  げっちゅ屋限定WスエードB2タペストリー付"
     ],
-    "per_page": 25
+    "per_page": 35
 }
