feat: 优化游戏数据下载逻辑并更新配置
- 在config.json中添加新的配置项
- 在tool.py中优化游戏数据下载逻辑，增加清除链接的功能
- 在templates/data.html中调整表格布局并增加选择功能
- 新增test_nyaa.py用于测试游戏数据获取功能

--- a/config.json
+++ b/config.json
@@ -25,6 +25,7 @@
         "・げっちゅ屋セット",
         "B2タペストリー付き",
         "＜完全限定受注生産＞",
+        "（B2タペストリー付き）",
         "＋Original Soundtrack",
         "Super Memorial Edition",
         "抱き枕カバーエディション",
